# WyrdEngine

./: .gitignore  .gitmodules  CMakeLists.txt  FrameworkLayer.cpp  FrameworkLayer.h  Makefile  README.md  build.bat  clean.bat  premake5.lua  propslist.json  proptests.json  renderdoc_notes
.github/workflows/: build-windows-all.yml  c-cpp.yml  wyrd-library.yml  wyrd-linux-library.yml
Apps/DevApp/: config.ini  example.scene.json  imgui.ini  not yet implemented
Apps/Editor/: Editor.args.json  Makefile  assets.cache  config.ini  imgui.ini  preferences.ini  recentProject.json  script.lua  test.json
Apps/ImGuiTests/: config.csv  imgui.ini
Apps/TestPlayer/: Makefile  TestPlayer.args.json
Osiris/src/: MathHelper.cpp  MathHelper.h  Osiris.h  osrpch.cpp  osrpch.h
OsirisAPI/: GameObject.cs  GameObjectManager.cs  InputEnums.cs  OsirisAPI.csproj  ScriptedObject.cs
OsirisCAPI/src/: C_Export.h  C_GameObject.cpp  C_GameObject.h  C_SpriteRenderer.cpp  C_SpriteRenderer.h
OsirisEditor/src/: EditorLayer.cpp  EditorLayer.h  EditorPlugin.h  IconLibrary.cpp  IconLibrary.h  main.cpp  osreditorpch.cpp  osreditorpch.h
Wyrd/: Makefile  OsirisAPI.csproj
Wyrd/src/: wyrdpch.cpp  wyrdpch.h
WyrdAPI/: OsirisAPI.csproj  WyrdAPI.csproj
WyrdCAPI/src/: C_Export.h  C_WyrdApp.cpp
WyrdGen/: WyrdGen.csproj
WyrdGen/datamodels/: ComponentDefintions.cs  TypeMappingDefinitions.cs
WyrdGen/definitions/: ComponentDefinitions.xml  TypeMappingDefinitions.xml
WyrdGen/src/: GeneratorUtils.cs  Program.cs  StringExtension.cs  Utils.cs
WyrdGen/templates/: ComponentSerialiserFactory.cpp.template  ComponentSerialiserFactory.h.template  Components.cs.template  Components.h.template  PInvokeAPI.cpp.template  PInvokeAPI.h.template
application/: ConsoleLogger.cpp  ConsoleLogger.h  SampleScene.cpp  SampleScene.h  config.ini  layer1.json  main.cpp  spritedata1.json
buildsystem/: Makefile  build-dependencies.sh  build-environment.sh  build-premake5.sh  build-spdlog.sh  build-toolchain.sh  clean-dependencies.sh  clean-toolchain.sh  glad.make  install-dependencies.sh  install-mono.sh  jsonxx.make  setup.sh  uuid.make
buildsystem/common/: setup-crossguid.sh  setup-freetype.sh  setup-glfw.sh  setup-glm.sh  setup-imgui.sh  setup-jsonxx.sh  setup-premake5.sh  setup-soil.sh  setup-spdlog.sh
buildsystem/linux/: build-dependencies.sh  build-freetype.sh  build-imgui.sh  build-jsonxx.sh  build-uuid.sh  build-wyrd.sh  clean-wyrd.sh  premake5-glad.lua  premake5-imgui.lua  premake5-jsonxx.lua  premake5-uuid.lua  setup-wyrd.sh  (+1 more)
dependencies/: premake5.lua
docs/: index.html
engine/: CMakeLists.txt  config.h  config.ini  export.h
engine/framework/: CMakeLists.txt  framework.cpp  framework.h
engine/resources/: sprite.frag  sprite.vert
engine/subsystems/common/: structures.h
engine/subsystems/graphics/: BatchTable.cpp  BatchTable.h  CMakeLists.txt  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
engine/subsystems/interfaces/: ILogger.h  IRenderer.h  ISubSystem.h  IWindow.h
engine/subsystems/loaders/: BitmapLoader.cpp  BitmapLoader.h  CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  ConfigLoaderStructures.h  LoaderStructures.h  ShaderLoader.cpp  ShaderLoader.h  SpriteLayerLoader.cpp  SpriteLayerLoader.h  SpriteLoader.cpp  SpriteLoader.h
engine/subsystems/renderer/: CMakeLists.txt  DX11Renderer.cpp  DX11Renderer.h  OGLRenderer.cpp  OGLRenderer.h  VulkanRenderer.cpp  VulkanRenderer.h
engine/subsystems/sprites/: CMakeLists.txt  Sprite.cpp  Sprite.h  SpriteLayer.cpp  SpriteLayer.h  SpriteSystem.cpp  SpriteSystem.h
engine/subsystems/window/: CMakeLists.txt  MSWindow.cpp  MSWindow.h
externalbuild/: premake5-efsw.lua  premake5-glad.lua  premake5-glfw.lua  premake5-hash.lua  premake5-imgui.lua  premake5-imguizmo.lua  premake5-json.lua  premake5-jsonxx.lua  premake5-lua.lua  premake5-luabridge.lua  premake5-soil.lua  premake5-spdlog.lua  premake5-uuid.lua
toolchain/: clone_all.bat  clone_all.sh  pull_all.bat  pull_all.sh
(+1213 files in other folders)
